examples/failing/TypeError.purs
module TypeError where

  import Prelude

  test = 1 ++ "A"
